// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <p>
    Default
  </p>
  <table
    class="table other-class this-is-a-test is-striped is-fullwidth"
  />
</DocumentFragment>
`;

exports[`Table component should render 1`] = `
<DocumentFragment>
  <table
    class="table is-striped is-fullwidth"
  />
</DocumentFragment>
`;

exports[`Table component should use inline styles 1`] = `
<DocumentFragment>
  <p>
    Default
  </p>
  <table
    class="table is-striped is-fullwidth"
    style="height: 250px;"
  />
</DocumentFragment>
`;
